LFHCFORMS-85: Handle VIEW mode for Diagnostic Immaging form 	modified:   diagnostic-imaging.html

--- a/omod/src/main/webapp/resources/htmlforms/diagnostic-imaging.html
+++ b/omod/src/main/webapp/resources/htmlforms/diagnostic-imaging.html
@@ -5,7 +5,7 @@
 <!-- This doesn't work out of the box because the observations in VIEW mode are nested within "obsgroups" so to link results and comments with the procedure ordered-->
 <!-- The main idea behind that is to lookup the procedure ordered (automatically filled in from the ENTER mode) and copy this obs into the "obsgroup" -->
 <!-- -->
-<!-- Write the HTML as above -->
+<!-- Please write your HTML code as below -->
 <!-- class="hiddenObs" is used to toggle the whole field when the obs has been selected -->
 <!-- class="source" is used to identify the obs that will be pasted into the "obsgroup" -->
 <!-- the id="8659-source" must be kept of this format. (The function parseFloat is used to determine the observation in the "obsgroup") -->
