--- a/omod/src/main/webapp/resources/htmlforms/opd-nurse.html
+++ b/omod/src/main/webapp/resources/htmlforms/opd-nurse.html
@@ -14,7 +14,7 @@
 	<script type="text/javascript" id="properViewModeForTable">
 		// JavaScript for VIEW mode
 		jQuery(document).ready(function(){
-				$("htmlform").each(function (index, currentForm) {
+			$("htmlform").each(function (index, currentForm) {
 				if ($(currentForm).attr("formuuid") == "44305e02-7e49-4f5a-8acf-49042acbe483") {
 					$("br").remove();
 					$("p").filter(":hidden").toggle(true);
@@ -22,7 +22,7 @@
 			});
 			properViewModeForTable("44305e02-7e49-4f5a-8acf-49042acbe483");
 			properViewMode("44305e02-7e49-4f5a-8acf-49042acbe483");
-		
+			
 		});
 	</script>
 </ifMode>
@@ -148,9 +148,11 @@
 					<when value="CIEL:1065" thenDisplay="#very-sick" />
 				</controls>				
 			</obs>
-			<span id="very-sick">
-				<font color="red"><strong> Take urgently to doctor</strong></font>
-			</span>
+			<ifMode mode="VIEW" include="false">
+				<span id="very-sick">
+					<font color="red"><strong> Take urgently to doctor</strong></font>
+				</span>
+			</ifMode>
 		</p>
 	</fieldset>
 	
@@ -186,7 +188,7 @@
 		</p>
 		<span id="previous-admission-yes">
 			<p>
-			<span class="questionLabel">Number of times: </span>
+				<span class="questionLabel">Number of times: </span>
 				<obs conceptId="CIEL:5704" />
 			</p>
 			<repeat>
@@ -233,7 +235,7 @@
 				<repeat>
 					<template>
 						<p id="{n}-toggleContainer" templateBlockId="medication" class="toggleContainer" style="display:none;">
-						<span class="questionLabel">Medication Family </span>
+							<span class="questionLabel">Medication Family </span>
 							<obs id="{n}" conceptId="CIEL:1193" />                                   
 							<i class="addEntry icon-">&#xf055; Add</i>
 							<i class="removeEntry icon-">   &#xf056; Remove</i>
@@ -251,7 +253,7 @@
 				<repeat>
 					<template>
 						<p id="{n}-toggleContainer" templateBlockId="medicatioOther" class="toggleContainer" style="display:none;">
-						<span class="questionLabel">Other </span>
+							<span class="questionLabel">Other </span>
 							<obs id="{n}" conceptId="CIEL:160632" />
 							<i class="addEntry icon-">&#xf055; Add</i>
 							<i class="removeEntry icon-">   &#xf056; Remove</i>
