More changes 	modified:   lines-tubes.html

--- a/omod/src/main/webapp/resources/htmlforms/lines-tubes.html
+++ b/omod/src/main/webapp/resources/htmlforms/lines-tubes.html
@@ -58,13 +58,13 @@
 				<obs conceptId="LFHC:1063" labelText="Date inserted: "/>
 			</p>
 			<p>
-				<obs conceptId="LFHC:1064" labelText="Size: " />
+				<obs conceptId="LFHC:1064" labelText="Size: " showUnits="true" />
 			</p>
 			<p>
 				<obs conceptId="LFHC:1065" labelText="Site: "/>
 			</p>
 			<p>
-				<obs conceptId="LFHC:1178" labelText="Date removed: "/>
+				<obs conceptId="LFHC:1182" labelText="Date removed: "/>
 			</p>
 		</obsgroup>
 	</fieldset>
@@ -76,13 +76,13 @@
 				<obs conceptId="LFHC:1066" labelText="Date inserted: "/>
 			</p>
 			<p>
-				<obs conceptId="LFHC:1067" labelText="Size: "/>
+				<obs conceptId="LFHC:1067" labelText="Size: " showUnits="true" />
 			</p>
 			<p>
 				<obs conceptId="LFHC:1068" labelText="Site: "/>
 			</p>
 			<p>
-				<obs conceptId="LFHC:1178" labelText="Date removed: "/>
+				<obs conceptId="LFHC:1183" labelText="Date removed: "/>
 			</p>
 
 		</obsgroup>
@@ -95,13 +95,13 @@
 				<obs conceptId="LFHC:1069" labelText="Date inserted: "/>
 			</p>
 			<p>
-				<obs conceptId="LFHC:1070" labelText="Size: "/>
+				<obs conceptId="LFHC:1070" labelText="Size: " showUnits="true" />
 			</p>
 			<p>
 				<obs conceptId="LFHC:1071" labelText="Site: "/>
 			</p>
 			<p>
-				<obs conceptId="LFHC:1178" labelText="Date removed: "/>
+				<obs conceptId="LFHC:1184" labelText="Date removed: "/>
 			</p>
 		</obsgroup>
 	</fieldset>
@@ -137,7 +137,7 @@
 				<obs conceptId="LFHC:1076" labelText="Date inserted: "/>
 			</p>
 			<p>
-				<obs conceptId="LFHC:1077" labelText="Size: "/>
+				<obs conceptId="LFHC:1077" labelText="Size: " showUnits="true" />
 			</p>
 		</obsgroup>
 	</fieldset>
