--- a/omod/src/main/webapp/resources/htmlforms/discharge.html
+++ b/omod/src/main/webapp/resources/htmlforms/discharge.html
@@ -17,6 +17,7 @@
 		// JavaScript for VIEW mode
 		jQuery(document).ready(function(){
 			properViewMode("cdc13a25-fe9e-43a5-85dd-7e2f31e8c860");
+			properViewModeForTable("cdc13a25-fe9e-43a5-85dd-7e2f31e8c860");
 		});
 	</script>
 </ifMode>
