--- a/omod/src/main/webapp/resources/htmlforms/clinicalnotes.html
+++ b/omod/src/main/webapp/resources/htmlforms/clinicalnotes.html
@@ -1,5 +1,11 @@
-<htmlform formUuid="d0c9f084-a2dc-4ed2-b69b-ab7fd3e71a97" formName="Clinical Notes" formEncounterType="49e7bc6c-bfbd-40dc-8164-45d82c55b5f9" formVersion="0.4">
-
+<htmlform
+	formUuid="d0c9f084-a2dc-4ed2-b69b-ab7fd3e71a97" formName="Clinical Notes" formEncounterType="49e7bc6c-bfbd-40dc-8164-45d82c55b5f9" formVersion="0.4"
+	formAddMetadata=""
+	formOrder="10"
+	formIcon="icon-file"
+	formShowIf=""
+	formDisplayStyle="Simple"
+	>
 
 <div class="hidden" id="who-when-where">
 	<p id="who">
