LFHCDESK-67: Growth chart - change names in dropdown box changing labels of answers 	modified:   phys-exam.html

--- a/omod/src/main/webapp/resources/htmlforms/phys-exam.html
+++ b/omod/src/main/webapp/resources/htmlforms/phys-exam.html
@@ -369,7 +369,7 @@
 			Growth chart
 		</h3>
 		<p>
-			<obs conceptId="CIEL:1854" answerConceptIds="CIEL:1115, CIEL:134723, CIEL:134722, CIEL:126598, CIEL:114413, CIEL:1067" answerLabels="Normal, Malnutrition of moderate degree (Z-score: -1), Malnutrition of moderate degree (Z-score: -2), Malnutrition of moderate degree (Z-score: -3), Overweight, Unknown" />
+			<obs conceptId="CIEL:1854" answerConceptIds="CIEL:1115, CIEL:134723, CIEL:134722, CIEL:126598, CIEL:114413, CIEL:1067" answerLabels="Normal, Malnutrition of mild degree (Z-score: -1), Malnutrition of moderate degree (Z-score: -2), Severe Protein-Calorie Malnutrition (Z-score: -3), Overweight, Unknown" />
 		</p>
 	</fieldset>
 </section>
