--- a/omod/src/main/webapp/resources/htmlforms/dispense-med.html
+++ b/omod/src/main/webapp/resources/htmlforms/dispense-med.html
@@ -1,5 +1,11 @@
-<htmlform formUuid="6021b82a-8f19-4308-a248-bc603ffaa880" formName="Dispense medication" formEncounterType="ef469ea5-8b79-4a64-a1c8-ce3e09b4e703" formVersion="0.4">
-
+<htmlform formUuid="6021b82a-8f19-4308-a248-bc603ffaa880" formName="Dispense medication" formEncounterType="ef469ea5-8b79-4a64-a1c8-ce3e09b4e703" formVersion="0.4"
+	formAddMetadata="yes"
+	formUILocation="patientDashboard.visitActions"
+	formOrder="18"
+	formIcon="icon-plus-sign-alt"
+	formShowIf=""
+	formDisplayStyle="Standard"
+	>
 
 <script type="text/javascript">
 
