--- a/omod/src/main/webapp/resources/htmlforms/fluidbalance.html
+++ b/omod/src/main/webapp/resources/htmlforms/fluidbalance.html
@@ -1,4 +1,11 @@
-<htmlform formUuid="1c6c9d87-748b-43c4-b764-3df7e711762f" formName="Fluid Balance" formEncounterType="9f5c90b2-03e0-4374-8534-6c32ea71f3ab" formVersion="0.4">
+<htmlform formUuid="1c6c9d87-748b-43c4-b764-3df7e711762f" formName="Fluid Balance" formEncounterType="9f5c90b2-03e0-4374-8534-6c32ea71f3ab" formVersion="0.4"
+	formAddMetadata="yes"
+	formUILocation="patientDashboard.visitActions"
+	formOrder="15"
+	formIcon="icon-medkit"
+	formShowIf=""
+	formDisplayStyle="Simple"
+	>
 
 <div class="hidden" id="who-when-where">
 	<p id="who">
