--- a/omod/src/main/webapp/resources/htmlforms/history.html
+++ b/omod/src/main/webapp/resources/htmlforms/history.html
@@ -1,4 +1,11 @@
-<htmlform formUuid="400a99d9-c1bd-4b5c-acb3-fedb4ccc0ea4" formName="Doctor History" formEncounterType="a9702711-f39c-4a91-ad96-88c1213b12b7" formVersion="0.4.4">
+<htmlform formUuid="400a99d9-c1bd-4b5c-acb3-fedb4ccc0ea4" formName="Doctor History" formEncounterType="a9702711-f39c-4a91-ad96-88c1213b12b7" formVersion="0.4.4"
+	formAddMetadata="yes"
+	formUILocation="patientDashboard.visitActions"
+	formOrder="4"
+	formIcon="icon-stethoscope"
+	formShowIf=""
+	formDisplayStyle="Simple"
+	>
 
 <ifMode mode="VIEW" include="false">
 	<uiInclude provider="lfhcforms" javascript="toggleContainers.js"/>
