--- a/omod/src/main/webapp/resources/htmlforms/ipd-nurse.html
+++ b/omod/src/main/webapp/resources/htmlforms/ipd-nurse.html
@@ -1,4 +1,11 @@
-<htmlform formUuid="348c2a9e-17c8-4c15-8cef-e8f332a69853" formName="IPD Nurse" formEncounterType="c88f3763-77a4-4e57-a42f-eef996b03b98" formVersion="0.4">
+<htmlform formUuid="348c2a9e-17c8-4c15-8cef-e8f332a69853" formName="IPD Nurse" formEncounterType="c88f3763-77a4-4e57-a42f-eef996b03b98" formVersion="0.4"
+	formAddMetadata="yes"
+	formUILocation="patientDashboard.visitActions"
+	formOrder="14"
+	formIcon="icon-medkit"
+	formShowIf=""
+	formDisplayStyle="Simple"
+	>
 
 
 <div class="hidden" id="who-when-where">
