--- a/omod/src/main/webapp/resources/htmlforms/phys-exam.html
+++ b/omod/src/main/webapp/resources/htmlforms/phys-exam.html
@@ -1,4 +1,11 @@
-<htmlform formUuid="f6dbee30-d965-47f5-b9b0-bc17f559dfad" formName="Doctor Physical Exam" formEncounterType="0d9203a9-c1a1-4358-832d-2fc91373558e" formVersion="0.4.4">
+<htmlform formUuid="f6dbee30-d965-47f5-b9b0-bc17f559dfad" formName="Doctor Physical Exam" formEncounterType="0d9203a9-c1a1-4358-832d-2fc91373558e" formVersion="0.4.4"
+	formAddMetadata="yes"
+	formUILocation="patientDashboard.visitActions"
+	formOrder="5"
+	formIcon="icon-stethoscope"
+	formShowIf=""
+	formDisplayStyle="Simple"
+	>
 
 <div class="hidden" id="who-when-where">
 	<p id="who">
