--- a/omod/src/main/webapp/resources/htmlforms/triage.html
+++ b/omod/src/main/webapp/resources/htmlforms/triage.html
@@ -1,4 +1,11 @@
-<htmlform formUuid="5743bf01-7879-40a0-ab26-95fc2446e510" formName="Triage" formEncounterType="5235f7da-194e-4278-afbd-a473bb430857" formVersion="0.4">
+<htmlform formUuid="5743bf01-7879-40a0-ab26-95fc2446e510" formName="Triage" formEncounterType="5235f7da-194e-4278-afbd-a473bb430857" formVersion="0.4"
+	formAddMetadata="yes"
+	formUILocation="patientDashboard.visitActions"
+	formOrder="1"
+	formIcon="icon-medkit"
+	formShowIf=""
+	formDisplayStyle="Standard"
+	>
 
 <script type="text/javascript">
 
